test/files/neg/nullary-override-3b.check
nullary-override-3b.scala:6: error: method without a parameter list overrides a method with a single empty one
class Q extends P { override def x: Int = 4 }
                                 ^
nullary-override-3b.scala:11: error: method without a parameter list overrides a method with a single empty one
class Mix12a extends T1 with T2 { override def x   = "12a" }
                                               ^
2 errors
